src/tess/tl/test/fail/test_fail_unknown_type_generic_arg.tl
// Unknown type name as a generic type argument should be rejected.
#module main

main() -> CInt {
    v: Ptr[Quux] := null
    0
}
